--- a/en/index.html
+++ b/en/index.html
@@ -1,6 +1,4 @@
 ---
 title: Home
 ---
-{% for post in site.posts %}
-<div><a href="{{ post.url }}">{{ post.title }}</a></div>
-{% endfor %}
+{% include posts.html %}
