last settings + analytics

--- a/en/index.html
+++ b/en/index.html
@@ -1,4 +1,6 @@
 ---
 title: Hi there in my blog 👋
+browserTitle: A blog by Max Krasnov 👋
+description: Hi there in my blog! I'm Full Stack Software Engineer.
 ---
 {% include posts.html %}
