--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 title: Приветствую в моём блоге 👋
+browserTitle: Блог Максима Краснова 👋
+description: Привет! Увлекаюсь веб/мобильной-разработкой и на этом ресурсе время от времени буду писать различные статьи на эту тему.
 ---
 {% include posts.html %}
